--- a/deploy/cert-manager-webhook-duckdns/values.yaml
+++ b/deploy/cert-manager-webhook-duckdns/values.yaml
@@ -6,16 +6,16 @@
 # solve the DNS01 challenge.
 # This group name should be **unique**, hence using your own company's domain
 # here is recommended.
-groupName: acme.mycompany.com
+groupName: acme.duckdns.org
 
 certManager:
   namespace: cert-manager
   serviceAccountName: cert-manager
 
 image:
-  repository: mycompany/webhook-image
-  tag: latest
-  pullPolicy: IfNotPresent
+  repository: nolte/cert-manager-webhook-duckdns
+  tag: dirty
+  pullPolicy: Always #IfNotPresent
 
 nameOverride: ""
 fullnameOverride: ""
