Updated to go 1.15, and latest mod, reorganised code structure

--- a/deploy/cert-manager-webhook-duckdns/values.yaml
+++ b/deploy/cert-manager-webhook-duckdns/values.yaml
@@ -13,8 +13,8 @@ certManager:
   serviceAccountName: cert-manager
 
 image:
-  repository: nolte/cert-manager-webhook-duckdns
-  tag: dirty
+  repository: ebrianne/cert-manager-webhook-duckdns
+  tag: latest
   pullPolicy: Always #IfNotPresent
 
 nameOverride: ""
