--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-bin
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+vendor
+.git/
 
 # Ignore the built binary
-cert-manager-webhook-example
-apiserver.local.config
+cert-manager-webhook-duckdns
+
+# Ignore test binaries
+__main__/
+
+# Test binary, build
+_out/
