--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,11 +10,7 @@ on:
 
 jobs:
   build-docker:
-    runs-on: ubuntu-latest
-    env:
-      IMAGE_NAMESPACE: ebrianne
-      IMAGE_NAME: cert-manager-webhook-duckdns
- 
+    runs-on: ubuntu-latest 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -39,4 +35,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
           push: true
-          tags: ${IMAGE_NAMESPACE}/${IMAGE_NAME}:latest
+          tags: ebrianne/cert-manager-webhook-duckdns:latest
