--- a/deploy/cert-manager-webhook-duckdns/templates/deployment.yaml
+++ b/deploy/cert-manager-webhook-duckdns/templates/deployment.yaml
@@ -27,7 +27,9 @@ spec:
           args:
             - --tls-cert-file=/tls/tls.crt
             - --tls-private-key-file=/tls/tls.key
-            - --v=2
+{{- if .Values.logLevel }}
+            - --v={{ .Values.logLevel }}
+{{- end }}
           env:
             - name: GROUP_NAME
               value: {{ .Values.groupName | quote }}
