--- a/deploy/cert-manager-webhook-duckdns/values.yaml
+++ b/deploy/cert-manager-webhook-duckdns/values.yaml
@@ -8,6 +8,8 @@
 # here is recommended.
 groupName: acme.duckdns.org
 
+logLevel: 6
+
 certManager:
   namespace: cert-manager
   serviceAccountName: cert-manager
