--- a/deploy/cert-manager-webhook-duckdns/Chart.yaml
+++ b/deploy/cert-manager-webhook-duckdns/Chart.yaml
@@ -1,5 +1,12 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
+description: cert manager webhook solver for ACME DNS01 challenge via DuckDNS
 name: cert-manager-webhook-duckdns
-version: 0.1.0
+version: 1.0
+home: https://github.com/ebrianne/cert-manager-webhook-duckdns
+sources:
+  - https://github.com/ebrianne/cert-manager-webhook-duckdns
+maintainers:
+  - name: Eldwan Brianne
+    email: eldwan35@gmail.com
+    url: https://ebrianne.technolab.duckdns.org
