--- a/deploy/cert-manager-webhook-duckdns/templates/rbac.yaml
+++ b/deploy/cert-manager-webhook-duckdns/templates/rbac.yaml
@@ -69,6 +69,14 @@ rules:
       - '*'
     verbs:
       - 'create'
+  - apiGroups:
+      - "flowcontrol.apiserver.k8s.io"
+    resources:
+      - 'prioritylevelconfigurations'
+      - 'flowschemas'
+    verbs:
+      - 'list'
+      - 'watch'
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
