--- a/deploy/cert-manager-webhook-duckdns/templates/rbac.yaml
+++ b/deploy/cert-manager-webhook-duckdns/templates/rbac.yaml
@@ -2,11 +2,78 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "cert-manager-webhook-duckdns.fullname" . }}
+  namespace: {{ .Values.certManager.namespace | quote }}
   labels:
     app: {{ include "cert-manager-webhook-duckdns.name" . }}
     chart: {{ include "cert-manager-webhook-duckdns.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+---
+# Grant cert-manager permission to validate using our apiserver
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ include "cert-manager-webhook-duckdns.fullname" . }}:domain-solver
+  labels:
+    app: {{ include "cert-manager-webhook-duckdns.name" . }}
+    chart: {{ include "cert-manager-webhook-duckdns.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+rules:
+  - apiGroups:
+      - {{ .Values.groupName }}
+    resources:
+      - '*'
+    verbs:
+      - 'create'
+# - apiGroups:
+#     - "flowcontrol.apiserver.k8s.io"
+#   resources:
+#     - 'prioritylevelconfigurations'
+#     - 'flowschemas'
+#   verbs:
+#     - 'list'
+#     - 'watch'
+---
+# apiserver gets the auth-delegator role to delegate auth decisions to
+# the core apiserver
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "cert-manager-webhook-duckdns.fullname" . }}:auth-delegator
+  labels:
+    app: {{ include "cert-manager-webhook-duckdns.name" . }}
+    chart: {{ include "cert-manager-webhook-duckdns.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:auth-delegator
+subjects:
+  - apiGroup: ""
+    kind: ServiceAccount
+    name: {{ include "cert-manager-webhook-duckdns.fullname" . }}
+    namespace: {{ .Values.certManager.namespace | quote }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "cert-manager-webhook-duckdns.fullname" . }}:domain-solver
+  labels:
+    app: {{ include "cert-manager-webhook-duckdns.name" . }}
+    chart: {{ include "cert-manager-webhook-duckdns.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: {{ include "cert-manager-webhook-duckdns.fullname" . }}:domain-solver
+subjects:
+  - apiGroup: ""
+    kind: ServiceAccount
+    name: {{ .Values.certManager.serviceAccountName }}
+    namespace: {{ .Values.certManager.namespace | quote }}
 ---
 # Grant the webhook permission to read the ConfigMap containing the Kubernetes
 # apiserver's requestheader-ca-certificate.
@@ -29,70 +96,4 @@ subjects:
   - apiGroup: ""
     kind: ServiceAccount
     name: {{ include "cert-manager-webhook-duckdns.fullname" . }}
-    namespace: {{ .Release.Namespace }}
----
-# apiserver gets the auth-delegator role to delegate auth decisions to
-# the core apiserver
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: {{ include "cert-manager-webhook-duckdns.fullname" . }}:auth-delegator
-  labels:
-    app: {{ include "cert-manager-webhook-duckdns.name" . }}
-    chart: {{ include "cert-manager-webhook-duckdns.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: system:auth-delegator
-subjects:
-  - apiGroup: ""
-    kind: ServiceAccount
-    name: {{ include "cert-manager-webhook-duckdns.fullname" . }}
-    namespace: {{ .Release.Namespace }}
----
-# Grant cert-manager permission to validate using our apiserver
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "cert-manager-webhook-duckdns.fullname" . }}:domain-solver
-  labels:
-    app: {{ include "cert-manager-webhook-duckdns.name" . }}
-    chart: {{ include "cert-manager-webhook-duckdns.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-rules:
-  - apiGroups:
-      - {{ .Values.groupName }}
-    resources:
-      - '*'
-    verbs:
-      - 'create'
-  - apiGroups:
-      - "flowcontrol.apiserver.k8s.io"
-    resources:
-      - 'prioritylevelconfigurations'
-      - 'flowschemas'
-    verbs:
-      - 'list'
-      - 'watch'
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: {{ include "cert-manager-webhook-duckdns.fullname" . }}:domain-solver
-  labels:
-    app: {{ include "cert-manager-webhook-duckdns.name" . }}
-    chart: {{ include "cert-manager-webhook-duckdns.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: {{ include "cert-manager-webhook-duckdns.fullname" . }}:domain-solver
-subjects:
-  - apiGroup: ""
-    kind: ServiceAccount
-    name: {{ .Values.certManager.serviceAccountName }}
-    namespace: {{ .Values.certManager.namespace }}
+    namespace: {{ .Values.certManager.namespace | quote }}
