Updated helm chart with pullSecret and existingSecret

--- a/deploy/cert-manager-webhook-duckdns/templates/production.cluster-issuer.yaml
+++ b/deploy/cert-manager-webhook-duckdns/templates/production.cluster-issuer.yaml
@@ -20,7 +20,7 @@ spec:
           config:
             apiTokenSecretRef:
               key: token
-              name: {{ include "cert-manager-webhook-duckdns.fullname" . }}
+              name: {{ include "cert-manager-webhook-duckdns.secretName" . }}
           groupName: {{ .Values.groupName }}
           solverName: duckdns
 {{- end -}}
