--- a/deploy/cert-manager-webhook-duckdns/templates/service.yaml
+++ b/deploy/cert-manager-webhook-duckdns/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "cert-manager-webhook-duckdns.fullname" . }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: {{ include "cert-manager-webhook-duckdns.name" . }}
     chart: {{ include "cert-manager-webhook-duckdns.chart" . }}
